--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.15.0",
+    "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "framer-motion": "^10.16.16",
     "path": "^0.12.7",
